# trading_backtester

./: .gitignore  CMakeLists.txt  README.md
core/: main.cpp  order_book.h  types.h
scripts/: main.py
